--- a/src/components/PlayArea.css
+++ b/src/components/PlayArea.css
@@ -8,27 +8,29 @@
     height: 50vh;
     width: 50vh;
     background-color: rgb(255, 127, 127);
-    text-align: center;
+    text-align: center
+    
   }
   
   .playarea-11 {
+    
     grid-area: a;
   }
   
   .playarea-12 {
-    grid-area: b;
+    grid-area: e;
   }
   
   .playarea-13 {
-    grid-area: c;
+    grid-area: i;
   }
   
   .playarea-14 {
-    grid-area: d;
+    grid-area: m;
   }
   
   .playarea-21 {
-    grid-area: e;
+    grid-area: b;
   }
   
   .playarea-22 {
@@ -36,34 +38,34 @@
   }
   
   .playarea-23 {
-    grid-area: g;
+    grid-area: j;
   }
   
   .playarea-24 {
-    grid-area: h;
+    grid-area: n;
   }
   
   .playarea-31 {
-    grid-area: i;
+    grid-area: c;
   }
   .playarea-32 {
-    grid-area: j;
+    grid-area: g;
   }
   .playarea-33 {
     grid-area: k;
   }
   .playarea-34 {
-    grid-area: l;
+    grid-area: o;
   }
   
   .playarea-41 {
-    grid-area: m;
+    grid-area: d;
   }
   .playarea-42 {
-    grid-area: n;
+    grid-area: h;
   }
   .playarea-43 {
-    grid-area: o;
+    grid-area: l;
   }
   .playarea-44 {
     grid-area: p;
